--- a/config/db.php.dist
+++ b/config/db.php.dist
@@ -13,7 +13,7 @@
  *
  */
 
-define('APP_DB_USER', 'user');
-define('APP_DB_PWD', 'password');
+define('APP_DB_USER', 'NELWILD');
+define('APP_DB_PWD', 'MYsql45&&@@');
 define('APP_DB_HOST', 'localhost');
-define('APP_DB_NAME', 'database_name');
+define('APP_DB_NAME', 'test');
