--- a/config/db.php.dist
+++ b/config/db.php.dist
@@ -16,4 +16,4 @@
 define('APP_DB_USER', 'user');
 define('APP_DB_PWD', 'password');
 define('APP_DB_HOST', 'localhost');
-define('APP_DB_NAME', 'test');
+define('APP_DB_NAME', 'database_name');
